force-app/main/default/objects/SSP_Benefits__c/SSP_Benefits__c.object-meta.xml
<CustomObject>
    <description>Stores benefit details such as household, individual, out of state, SSI benefits etc.</description>
    <label>SSP Benefits</label>
    <nameField>
        
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        
        <label>SSP_Benefits Name</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>SSP Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>