force-app/main/default/objects/SSP_Benefits__c/fields/BeginDate__c.field-meta.xml
<CustomField>
    <fullName>BeginDate__c</fullName>
    <description>This field is used to begin date for which benefits are available for a member</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Begin Date</label>
    <type>Date</type>
</CustomField>