force-app/main/default/objects/SSP_Benefits__c/fields/BenefitApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>BenefitApplicationDate__c</fullName>
    <description>This field is used to store Application date for which benefits are available for a member</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefit Application Date</label>
    <type>Date</type>
</CustomField>