force-app/main/default/objects/SSP_Benefits__c/fields/BenefitDenialDate__c.field-meta.xml
<CustomField>
    <fullName>BenefitDenialDate__c</fullName>
    <description>This field is used to store Denial Date for which benefits are removed for a member</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefit Denial Date</label>
    <type>Date</type>
</CustomField>