force-app/main/default/objects/SSP_Benefits__c/fields/BenefitDenialReason__c.field-meta.xml
<CustomField>
    <fullName>BenefitDenialReason__c</fullName>
    <description>This field is used to store Denial Reason for which benefits are removed for a member</description>
    <label>Benefit Denial Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OIL</fullName>
                <label>Over the income limit</label>
            </value>
            <value>
                <fullName>ORL</fullName>
                <label>Over the resource limit</label>
            </value>
            <value>
                <fullName>NBD</fullName>
                <label>Not blind/disabled</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <label>None of the above</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>