force-app/main/default/objects/SSP_Benefits__c/fields/BenefitInfoCounty__c.field-meta.xml
<CustomField>
    <fullName>BenefitInfoCounty__c</fullName>
    <description>This field is used to store county for which benefits are available for a member</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Benefit County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>