force-app/main/default/objects/SSP_Benefits__c/fields/BenefitPrograms__c.field-meta.xml
<CustomField>
    <fullName>BenefitPrograms__c</fullName>
    <description>This field is used to store applicable programs for which benefits are available for a member</description>
    <label>Benefit Programs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OOSPrograms</valueSetName>
    </valueSet>
</CustomField>