force-app/main/default/objects/SSP_Benefits__c/fields/BenefitStateCountyKey__c.field-meta.xml
<CustomField>
    <fullName>BenefitStateCountyKey__c</fullName>
    <description>Used to determine the unique benefits created for state and county</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Benefit State County Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>