force-app/main/default/objects/SSP_Benefits__c/fields/BenefitTypeCode__c.field-meta.xml
<CustomField>
    <fullName>BenefitTypeCode__c</fullName>
    <description>This field is used to store Benefits type for which benefits are available for a member</description>
    <label>Benefit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BenefitTypeCode</valueSetName>
    </valueSet>
</CustomField>