force-app/main/default/objects/SSP_Benefits__c/fields/DCBenefitsId__c.field-meta.xml
<CustomField>
    <fullName>DCBenefitsId__c</fullName>
    <description>Field to get Unique Benefit record.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>DCBenefitsId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>