force-app/main/default/objects/SSP_Benefits__c/fields/DCId__c.field-meta.xml
<CustomField>
    <fullName>DCId__c</fullName>
    <description>Used to store the generic DC ids from .NET Table</description>
    <externalId>true</externalId>
    <label>DC Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>