force-app/main/default/objects/SSP_Benefits__c/fields/HasMedicareCoverageButNoInfo__c.field-meta.xml
<CustomField>
    <fullName>HasMedicareCoverageButNoInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate the flag when there is a medical coverage but no information</description>
    <label>Has Medicare Coverage But No Info</label>
    <type>Checkbox</type>
</CustomField>