force-app/main/default/objects/SSP_Benefits__c/fields/MedicareNumber__c.field-meta.xml
<CustomField>
    <fullName>MedicareNumber__c</fullName>
    <description>This field is used to store Medicare number</description>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Medicare Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>