force-app/main/default/objects/SSP_Benefits__c/fields/MedicareTypeCode__c.field-meta.xml
<CustomField>
    <fullName>MedicareTypeCode__c</fullName>
    <description>This field is used to store Medicare type code</description>
    <label>Medicare Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MedicareTypeCode</valueSetName>
    </valueSet>
</CustomField>