force-app/main/default/objects/SSP_Benefits__c/fields/SSP_Member__c.field-meta.xml
<CustomField>
    <fullName>SSP_Member__c</fullName>
    <description>This field is used to indicate the member for a particular Benefit record</description>
    <label>SSP_Member</label>
    <referenceTo>SSP_Member__c</referenceTo>
    <relationshipName>SSP_Benefits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>