force-app/main/default/objects/SSP_Benefits__c/fields/StatusofApplication__c.field-meta.xml
<CustomField>
    <fullName>StatusofApplication__c</fullName>
    <description>This field is used to store status of application for which benefits are available for a member</description>
    <label>Status Of Application</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>AI</fullName>
                
                
                    <label>Pending Application</label>
                
                </value>
            
                <value>
                
                    <fullName>AE</fullName>
                
                
                    <label>Pending Appeal</label>
                
                </value>
            
                <value>
                
                    <fullName>DN</fullName>
                
                
                    <label>Denied</label>
                
                </value>
            
                <value>
                
                    <fullName>TR</fullName>
                
                
                    <label>Discontinued</label>
                
                </value>
            
                <value>
                
                    <fullName>A</fullName>
                
                
                    <label>Applied</label>
                
                </value>
            
                <value>
                
                    <fullName>P</fullName>
                
                
                    <label>Not Applied</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>