force-app/main/default/objects/SSP_Benefits__c/recordTypes/EntitledBenefit.recordType-meta.xml
<RecordType>
    <fullName>EntitledBenefit</fullName>
    <active>true</active>
    <description>This record type is used to store entitled benefits.</description>
    <label>EntitledBenefit</label>
</RecordType>