force-app/main/default/objects/SSP_Benefits__c/recordTypes/MedicareBenefit.recordType-meta.xml
<RecordType>
    <fullName>MedicareBenefit</fullName>
    <active>true</active>
    <description>Record type for Medicare Coverage Summary and details</description>
    <label>MedicareBenefit</label>
</RecordType>