force-app/main/default/objects/SSP_Benefits__c/recordTypes/OutOfStateBenefit.recordType-meta.xml
<RecordType>
    <fullName>OutOfStateBenefit</fullName>
    <active>true</active>
    <description>For - Benefits in/from other state</description>
    <label>OutOfStateBenefit</label>
</RecordType>