force-app/main/default/objects/SSP_Benefits__c/recordTypes/SSIBenefits.recordType-meta.xml
<RecordType>
    <fullName>SSIBenefits</fullName>
    <active>true</active>
    <description>Used to store the SSI Benefits</description>
    <label>SSIBenefits</label>
</RecordType>