force-app/main/default/objects/SSP_Benefits__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SSP_Member__c</columns>
    <columns>BenefitPrograms__c</columns>
    <columns>State__c</columns>
    <columns>BeginDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>